[gd_scene format=3 uid="uid://b5theme_select_screen"]

[ext_resource type="Script" path="res://scripts/ui/ThemeSelectScreen.gd" id="1_theme_select"]

[node name="ThemeSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_theme_select")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Animation"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ThemeList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
